err/simulatortofmu.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/SimulatorToFMU-1.0.0rc14.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simulatortofmu'...
Listing './lib/python3.5/site-packages/simulatortofmu/bin'...
Listing './lib/python3.5/site-packages/simulatortofmu/doc'...
Listing './lib/python3.5/site-packages/simulatortofmu/doc/userGuide'...
Listing './lib/python3.5/site-packages/simulatortofmu/doc/userGuide/source'...
Listing './lib/python3.5/site-packages/simulatortofmu/doc/userGuide/source/_static'...
Listing './lib/python3.5/site-packages/simulatortofmu/doc/userGuide/source/_templates'...
Listing './lib/python3.5/site-packages/simulatortofmu/doc/userGuide/www'...
Listing './lib/python3.5/site-packages/simulatortofmu/doc/userGuide/www/userGuide'...
Listing './lib/python3.5/site-packages/simulatortofmu/doc/userGuide/www/userGuide/_static'...
Listing './lib/python3.5/site-packages/simulatortofmu/fmus'...
Listing './lib/python3.5/site-packages/simulatortofmu/fmus/dymola'...
Listing './lib/python3.5/site-packages/simulatortofmu/fmus/dymola/linux'...
Listing './lib/python3.5/site-packages/simulatortofmu/fmus/dymola/windows'...
Listing './lib/python3.5/site-packages/simulatortofmu/fmus/jmodelica'...
Listing './lib/python3.5/site-packages/simulatortofmu/fmus/jmodelica/linux'...
Listing './lib/python3.5/site-packages/simulatortofmu/fmus/jmodelica/windows'...
Listing './lib/python3.5/site-packages/simulatortofmu/fmus/openmodelica'...
Listing './lib/python3.5/site-packages/simulatortofmu/fmus/openmodelica/windows'...
Listing './lib/python3.5/site-packages/simulatortofmu/parser'...
Listing './lib/python3.5/site-packages/simulatortofmu/parser/libraries'...
Listing './lib/python3.5/site-packages/simulatortofmu/parser/libraries/modelica'...
Listing './lib/python3.5/site-packages/simulatortofmu/parser/libraries/modelica/SimulatorToFMU'...
Listing './lib/python3.5/site-packages/simulatortofmu/parser/libraries/modelica/SimulatorToFMU/Python27'...
Listing './lib/python3.5/site-packages/simulatortofmu/parser/libraries/modelica/SimulatorToFMU/Python27/Functions'...
Listing './lib/python3.5/site-packages/simulatortofmu/parser/libraries/modelica/SimulatorToFMU/Python27/UsersGuide'...
Listing './lib/python3.5/site-packages/simulatortofmu/parser/libraries/modelica/SimulatorToFMU/Resources'...
Listing './lib/python3.5/site-packages/simulatortofmu/parser/libraries/modelica/SimulatorToFMU/Resources/C-Sources'...
Listing './lib/python3.5/site-packages/simulatortofmu/parser/libraries/modelica/SimulatorToFMU/Resources/Library'...
Listing './lib/python3.5/site-packages/simulatortofmu/parser/libraries/modelica/SimulatorToFMU/Resources/Python-Sources'...
Listing './lib/python3.5/site-packages/simulatortofmu/parser/libraries/modelica/SimulatorToFMU/Resources/ReferenceResults'...
Listing './lib/python3.5/site-packages/simulatortofmu/parser/libraries/modelica/SimulatorToFMU/Resources/Scripts'...
Listing './lib/python3.5/site-packages/simulatortofmu/parser/libraries/modelica/SimulatorToFMU/Resources/src'...
Listing './lib/python3.5/site-packages/simulatortofmu/parser/libraries/modelica/bin'...
Compiling './lib/python3.5/site-packages/simulatortofmu/parser/libraries/modelica/bin/runUnitTests.py'...
***   File "./lib/python3.5/site-packages/simulatortofmu/parser/libraries/modelica/bin/runUnitTests.py", line 46
    print "The following malformed html syntax has been found:\n%s" % errMsg[i]
                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/simulatortofmu/parser/utilities'...
Listing './share'...
Listing './share/python-wheels'...
